2024.4.14 lc75 + backtracking